day one tutorial

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</header>
 	<hr>
 	<nav id="navbar">
-		<img src="./2.jpg">
+		<img src="./Newfolder/7.jpg">
 		<ul id="navcontent">
 			<li><a href="#">Home</a></li>
 			<li><a href="#">About</a></li>
@@ -54,7 +54,7 @@
 			<button class="btn">ORDER NOW</button>
 		</div>
 	</div>
-	<footer>Copyright © 2020-2021 OnlineFoodShop.
+	<footer>Copyright © 2020-20./Newfolder/ OnlineFoodShop.
 		All Rights are reserved</footer>
 </body>
 </html>
